projeto finalizado com js

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <img src="./src/images/pattern-divider-desktop.svg" alt="Pattern divider">
       </picture>
     
-      <button><img src="./src/images/icon-dice.svg" alt="icone dado"></button>
+      <button id="button"><img src="./src/images/icon-dice.svg" alt="icone dado"></button>
     </div>
   </div>
+
+
+  <script type="text/javascript" src="./src/js/index.js"></script>
 </body>
 </html>
